<resources>
    <string name="app_name">FitnessAndNutritionAppFinal</string>

    <string name="home_menu_item">Home</string>
    <string name="fitness_menu_item">Fitness</string>
    <string name="profile_menu_item">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="profile_header">User Profile</string>
    <string name="hintProName">Name</string>
    <string name="hintProWeight">Weight</string>
    <string name="hintProAge">Age</string>

    <string name="rmvMsg"> Enter the routine to remove:</string>

    <string name="DayM">Monday</string>
    <string name="DayY">Tuesday</string>
    <string name="DayW">Wednesday</string>
    <string name="DayTR">Thursday</string>
    <string name="DayF">Friday</string>
    <string name="DayS">Saturday</string>
    <string name="DaySU">Sunday</string>
    <string name="addDaysDialogMsg">Select routines for this day</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="routine_name">Routine Name</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="reps">reps</string>
    <string name="sets">sets</string>
    <string name="weight">weight</string>
    <string name="ok">Ok</string>
    <string name="close">Close</string>
    <string name="id">id</string>


</resources>