<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/rtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/routine_name"
        android:inputType="text"/>

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginTop="50dp"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"/>


</RelativeLayout>