<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rmvMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rmvMsg"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/rmvIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/id"
            android:textAlignment="center"
            android:inputType="number" />


    </LinearLayout>

    <Button
        android:id="@+id/okBtnRMV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginTop="125dp"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/closeBtnRMV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_marginTop="125dp"
        android:layout_alignParentLeft="true"/>


</RelativeLayout>