<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/adName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/addDaysDialogMsg"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/adDialogLinLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center"/>

    <Button
        android:id="@+id/adokBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adDialogLinLay"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/adcloseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adDialogLinLay"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="70dp"
        android:text="@string/close" />


</RelativeLayout>